--- a/config/production_database.yml
+++ b/config/production_database.yml
@@ -3,5 +3,5 @@ production:
   encoding: unicode
   pool: 5
   database: zk_site_db
-  username: zk_user
-  password: lipZK25
+  username: postgres
+  password: lip.yAr.bd
